# adventofcode2022

./: .gitignore  make_my_day.sh
01/: Cargo.toml  Makefile
02/: Makefile
05/: Makefile
06/src/: lib.rs
07/: bash-hackery.sh
07/src/: lib.rs  lib.rs-yagni
08/src/: README.md  lib.rs
